--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@
 /build
 
 # misc
-**/.DS_Store
-**/*.pem
+.DS_Store
+*.pem
 
 # debug
 npm-debug.log*
@@ -30,6 +30,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 # vercel
 .vercel
