--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon"
   },
   "dependencies": {
     "express": "^4.17.3"
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "dotenv": "^16.0.0",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
